GVR iOS SDK v1.0.0

--- a/Samples/VideoWidgetDemo/Main.storyboard
+++ b/Samples/VideoWidgetDemo/Main.storyboard
@@ -19,6 +19,7 @@
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xSQ-Rm-Amy">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <accessibility key="accessibilityConfiguration" identifier="sample_scroll_view"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hSa-1o-yF1" userLabel="Content View">
                                         <rect key="frame" x="0.0" y="0.0" width="600" height="1020"/>
